--- a/namanstyles.css
+++ b/namanstyles.css
@@ -369,7 +369,7 @@ p {
   text-align: center;
   border-radius: 10px;
   padding: 30px;
-  margin: 30px;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
