--- a/namanstyles.css
+++ b/namanstyles.css
@@ -132,13 +132,13 @@ p {
 #header .nav-list ul {
   list-style: none;
   position: absolute;
-  background-color: rgb(31, 30, 30);
+  
   width: 100vw;
-  height: 100vh;
-  left: 100%;
+  height: 9vh;
+  left: 16%;
   top: 0;
   display: flex;
-  flex-direction: column;
+  
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -149,7 +149,7 @@ p {
 
 
 #header .nav-list ul a {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: 500;
   letter-spacing: 0.2rem;
   text-decoration: none;
@@ -617,4 +617,55 @@ p {
     flex-basis: 22%;
     margin: 1.5%;
   }
+}
+
+@media only screen and (max-width:900px) {
+  #header .nav-list ul{
+    display:none;
+  }
+  #header .nav-list .menuicon img{
+    width:55px;
+    height:55px;
+  }
+  .menuicon{
+    position: fixed;
+    top:20px;
+    right:20px;
+    cursor:pointer;
+    z-index: 1001;
+  }
+  
+}
+@media only screen and (min-width:900px)
+{
+.menuicon{
+  display: none;
+}
+}
+.hamburger{
+      position: absolute;
+      display: flex;
+      z-index: 1001;
+      top:9vw;
+      width:98%;
+     
+      margin-left: 1%;
+      margin-right: 1%;
+      justify-content: center;
+      background-color: orange;
+      
+
+}
+.hamburger li{
+  font-size: x-large;
+  margin:3vw;
+  font-weight: bold;
+  text-align: center;
+  color:#DAD0C2;
+}
+.hamburger ul{
+  list-style-type: none;
+}
+.hamburger-hide{
+display: none;
 }
